@@ -1,3 +1,9 @@
+2005-10-13  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/Lambda.java (rewriteBody): If returnType specified, wrap
+	body in coercion even if it is a BeginExp.
+	However, don't do so it returnType is void_type.
+
 2005-10-06  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (select-javaXX): Also search inherited $CLASSPATH -
